--- a/.github/workflows/build-zepben.yaml
+++ b/.github/workflows/build-zepben.yaml
@@ -1,7 +1,7 @@
 name: Build Zepben Linux libraries
 
 on: 
-  workflow_call:
+  workflow_dispatch:
     inputs:
       tag:
         description: 'Tag to use for lib release'
