Push OpenDSS diagnostic messages to RabbitMQ queue (#4)
* Structural updates
* Update to makefiles, added test utility and updated proto source/headers
* Remove all file generation for diagnostics reports
* Remove files writing from EnergyMeter
* Currently, in many of the functions it's just 'Exit' in the top of the function body, will remove functions altogether at a later stage.
* Bug fixes in Utilities.pas when working with dynamic arrays.

Signed-off-by: Alex Lourie <alex.lourie@zepben.com>
Signed-off-by: Anthony Charlton <anthony.charlton@zepben.com>
Co-authored-by: Anthony Charlton <anthony.charlton@zepben.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *.ilk
 #*.map
 *.exp
+.ccls*
 
 # Precompiled Headers
 *.gch
@@ -22,6 +23,7 @@
 *.a
 *.la
 *.lo
+lib/
 
 # Shared objects (inc. Windows DLLs)
 *.dll
@@ -51,6 +53,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+usr/
 
 # Recommended KLUSolve build folder
 klusolve/build
@@ -73,3 +76,4 @@ docs/doxygen
 docs/build
 
 .idea
+*.iml
