--- a/.github/workflows/build-zepben.yaml
+++ b/.github/workflows/build-zepben.yaml
@@ -59,8 +59,8 @@ jobs:
       - name: Create artefact
         uses: actions/upload-artifact@master
         with:
-          name: ${{ steps.build.outputs.artifactId }}-${{ steps.build.outputs.version }}
-          path: ${{ steps.build.outputs.artifact-path }}
+          name: dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2 
+          path: package/dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2 
 
 
       - name: Create Release and upload assets
