--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Find commit
         id: find-commit
         run: |
-          commit=$(git rev-parse --short ${{ github.event.inputs.commitID }})
-          echo "::set-output name=commit::$(echo $commit)"
+          commit=
+          echo "commit=$(git rev-parse --short ${{ github.event.inputs.commitID }})" >> $GITHUB_ENV
 
   build_linux_x64:
     needs: [find-commit]
@@ -42,8 +42,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ needs.find-commit.outputs.commitID }}
-
-
 
       - name: Build the libraries
         run: |
