--- a/Dockerfile.debian-builder
+++ b/Dockerfile.debian-builder
@@ -10,6 +10,7 @@ RUN apt -y update && apt install -y \
  python3 \
  libprotobuf-c-dev \
  librabbitmq-dev \
+ git \
  && rm -rf /var/lib/apt/lists/*
 
 ENV FPC_VERSION="3.2.2" \
