--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,12 +2,18 @@ name: Zepben Release Build
 
 on: 
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'The branch to use for the release'     
+        required: false
+        type: string
+
 
 jobs:
   find-commit:
     runs-on: ubuntu-latest
     outputs:
-      commitID: ${{ steps.find-commit.outputs.commit }}
+      branch: ${{ steps.find-commit.outputs.branch }}
 
     steps:
       - uses: actions/checkout@v3
@@ -21,8 +27,13 @@ jobs:
       - name: Find commit
         id: find-commit
         run: |
-          commit=$(git rev-parse --short ${{ github.event.inputs.commitID }})
-          echo "::set-output name=commit::$(echo $commit)"
+          if [ -z ${{ github.event.inputs.branch }} ]
+          then
+            branch="main"
+          else
+            branch=${{ github.event.inputs.branch }}
+          fi
+          echo "BRANCH=$(echo $branch)" >> $GITHUB_ENV
 
 
   build_linux_x64:
@@ -35,24 +46,26 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
 
     steps:
+
+      - name: Define the commit the version
+        run: |
+          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
+          echo "TESTING multistep env: '$BRANCH'"
+          echo "VERSION=$(echo v$version)" >> $GITHUB_ENV
+          echo "BRANCH=${{ find-commit.outputs.branch }}" >> $GITHUB_ENV
+
       - uses: actions/checkout@v3
         with:
-          ref: ${{ needs.find-commit.outputs.commitID }}
+          ref: $BRANCH
 
-      - name: Udate version for release
-        id: check
+      - name: Work around git permission issue
         run: |
-          build/update-changelog.sh
-        shell: bash
+          dname=$(echo ${{github.repository}} | cut -d'/' -f2)
+          git config --global --add safe.directory /__w/$dname/$dname
+        shell: sh
 
-      - name: Checkout release branch
-        run: |
-          git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
-          git fetch --all
-          git checkout release
-        shell: bash
 
-      - name: Build the libraries
+      - name: Build the dss libraries
         run: |
           make ci
         shell: bash
@@ -60,21 +73,16 @@ jobs:
       - name: Package the libraries
         run: |
           make package
-          mv package/dss-libs.bz2 package/dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2
+          mv package/dss-libs.bz2 package/dss-libs-$COMMIT.bz2
         shell: bash
 
-      - name: Merge and Tag
-        id: merge
+      - name: Get latest changelog
+        id: changelog
         run: |
-          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
-          git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
-          git fetch --all
-          git branch -a
-          git merge origin/release
-          git push origin ${GITHUB_REF/refs\/heads\//}
-          git tag "v$version"
-          git push --tags
-          echo "::set-output name=tag::$(echo v$version)"
+          lines=$(egrep -n "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | head -2 | cut -f1 -d:)
+          line1=$(echo "$lines" | head -1)
+          line2=$(echo "$lines" | tail -1)
+          cat changelog.md | tail -n +$((line1+1)) | head -n $((line2-line1-1)) > latest_changelog.txt
         shell: bash
         continue-on-error: true
 
@@ -85,18 +93,37 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ needs.merge.outputs.tag }}
+          tag_name: $VERSION
+          body_path: latest_changelog.txt
           draft: false
           prerelease: false
           files: |
-            package/dss-libs-${{ needs.merge.outputs.tag }}.bz2
-        continue-on-error: false
+            package/dss-libs-$VERSION.bz2
+        continue-on-error: true
 
-      - name: Delete release branch if deploy failed and fail
-        if: steps.build.outcome == 'failure' || steps.upload.outcome == 'failure'
+      - name: Update version for release
+        id: check
         run: |
-          git push origin -d release
-          echo "There was an error in the mvn deploy command above."
-          exit 1
+          build/update-changelog.sh $VERSION
         shell: bash
 
+      - name: Merge and Tag
+        id: merge
+        run: |
+          git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+          git fetch --all
+          git branch -a
+          git merge origin/release
+          git push origin ${GITHUB_REF/refs\/heads\//}
+          git tag "v$VERSION"
+          git push --tags
+        shell: bash
+        continue-on-error: true
+
+      - name: Fail if any previous step failed
+        if: steps.merge.outcome == 'failure'
+        run: |
+          git push origin -d release
+          echo "There was an error in merging the branch. release branch was deleted."
+          exit 1
+        shell: bash
