Debug branch detection
Signed-off-by: Alex Lourie <alex.lourie@zepben.com>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,6 +35,9 @@ jobs:
           fi
           echo "BRANCH=$(echo $branch)" >> $GITHUB_ENV
 
+      - name: Debug
+        run: echo "BRANCH is $BRANCH"
+
 
   build_linux_x64:
     needs: [find-commit]
