--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -12,9 +12,6 @@ on:
 jobs:
   find-commit:
     runs-on: ubuntu-latest
-    outputs:
-      branch: ${{ steps.find-commit.outputs.branch }}
-
     steps:
       - uses: actions/checkout@v3
 
@@ -33,10 +30,7 @@ jobs:
           else
             branch=${{ github.event.inputs.branch }}
           fi
-          echo "BRANCH=$(echo $branch)" >> $GITHUB_ENV
-
-      - name: Debug
-        run: echo "BRANCH is $BRANCH"
+          echo "BRANCH=$(echo $branch)" >> $GITHUB_OUTPUT
 
 
   build_linux_x64:
@@ -50,16 +44,15 @@ jobs:
 
     steps:
 
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ needs.find-commit.outputs.BRANCH }}
+
       - name: Define the commit the version
         run: |
           version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
           echo "TESTING multistep env: '$BRANCH'"
           echo "VERSION=$(echo v$version)" >> $GITHUB_ENV
-          echo "BRANCH=${{ needs.find-commit.outputs.branch }}" >> $GITHUB_ENV
-
-      - uses: actions/checkout@v3
-        with:
-          ref: $BRANCH
 
       - name: Work around git permission issue
         run: |
@@ -127,6 +120,6 @@ jobs:
         if: steps.merge.outcome == 'failure'
         run: |
           git push origin -d release
-          echo "There was an error in merging the branch. release branch was deleted."
+          echo "There was an error in merging the branch. Release branch was deleted." >> $GITHUB_STEP_SUMMARY
           exit 1
         shell: bash
