--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,16 +10,15 @@ on:
 
 
 jobs:
-  find-commit:
+  build_linux_x64:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    container: 
+      image: ghcr.io/zepben/dss-capi-builder:latest
 
-      - name: Work around git permission issue
-        run: |
-          dname=$(echo ${{github.repository}} | cut -d'/' -f2)
-          git config --global --add safe.directory /__w/$dname/$dname
-        shell: sh
+    env:
+      GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+
+    steps:
 
       - name: Find commit
         id: find-commit
@@ -30,23 +29,11 @@ jobs:
           else
             branch=${{ github.event.inputs.branch }}
           fi
-          echo "BRANCH=$(echo $branch)" >> $GITHUB_OUTPUT
-
-
-  build_linux_x64:
-    needs: [find-commit]
-    runs-on: ubuntu-latest
-    container: 
-      image: ghcr.io/zepben/dss-capi-builder:latest
-
-    env:
-      GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
-
-    steps:
+          echo "BRANCH=$(echo $branch)" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
         with:
-          ref: ${{ needs.find-commit.outputs.BRANCH }}
+          ref: $BRANCH
 
       - name: Define the commit the version
         run: |
