--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -16,7 +16,7 @@ jobs:
       image: ghcr.io/zepben/dss-capi-builder:latest
 
     env:
-      GITHUB_TOKEN: ${{ secrets.CI_GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets._GITHUB_TOKEN }}
 
     steps:
 
@@ -31,7 +31,10 @@ jobs:
           fi
           echo "BRANCH=$(echo $branch)" >> $GITHUB_ENV
 
-      - uses: actions/checkout@v3
+      - name: Testing Branch
+        run: echo "Working with $BRANCH"
+
+      - uses: actions/checkout@v4
         with:
           ref: $BRANCH
 
