--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,20 +35,21 @@ jobs:
         run: echo "Working with $BRANCH"
 
       - uses: actions/checkout@v4
-        with:
-          ref: $BRANCH
-
-      - name: Define the commit the version
-        run: |
-          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
-          echo "TESTING multistep env: '$BRANCH'"
-          echo "VERSION=$(echo v$version)" >> $GITHUB_ENV
 
       - name: Work around git permission issue
         run: |
           dname=$(echo ${{github.repository}} | cut -d'/' -f2)
           git config --global --add safe.directory /__w/$dname/$dname
         shell: sh
+
+      - name: Checkout $BRANCH
+        run: git checkout $BRANCH
+
+      - name: Define the commit the version
+        run: |
+          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
+          echo "TESTING multistep env: '$BRANCH'"
+          echo "VERSION=$(echo v$version)" >> $GITHUB_ENV
 
 
       - name: Build the dss libraries
