--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -31,9 +31,6 @@ jobs:
           fi
           echo "BRANCH=$(echo $branch)" >> $GITHUB_ENV
 
-      - name: Testing Branch
-        run: echo "Working with $BRANCH"
-
       - uses: actions/checkout@v4
 
       - name: Work around git permission issue
@@ -42,15 +39,13 @@ jobs:
           git config --global --add safe.directory /__w/$dname/$dname
         shell: sh
 
-      - name: Checkout $BRANCH
+      - name: Checkout the correct branch
         run: git checkout $BRANCH
 
       - name: Define the commit the version
         run: |
           version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
-          echo "TESTING multistep env: '$BRANCH'"
           echo "VERSION=$(echo v$version)" >> $GITHUB_ENV
-
 
       - name: Build the dss libraries
         run: |
@@ -60,8 +55,9 @@ jobs:
       - name: Package the libraries
         run: |
           make package
-          mv package/dss-libs.bz2 package/dss-libs-$COMMIT.bz2
+          mv package/dss-libs.bz2 package/dss-libs-$VERSION.bz2
         shell: bash
+        continue-on-error: false
 
       - name: Get latest changelog
         id: changelog
@@ -71,7 +67,7 @@ jobs:
           line2=$(echo "$lines" | tail -1)
           cat changelog.md | tail -n +$((line1+1)) | head -n $((line2-line1-1)) > latest_changelog.txt
         shell: bash
-        continue-on-error: true
+        continue-on-error: false
 
       - name: Create Release and upload assets
         if: success()
@@ -86,13 +82,14 @@ jobs:
           prerelease: false
           files: |
             package/dss-libs-$VERSION.bz2
-        continue-on-error: true
+        continue-on-error: false
 
       - name: Update version for release
         id: check
         run: |
           build/update-changelog.sh $VERSION
         shell: bash
+        continue-on-error: false
 
       - name: Merge and Tag
         id: merge
