--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -45,7 +45,8 @@ jobs:
       - name: Define the commit the version
         run: |
           version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep -v UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
-          echo "VERSION=$(echo v$version)" >> $GITHUB_ENV
+          echo "VERSION=$(echo $version)" >> $GITHUB_ENV
+          echo "ARTEFACT=package/dss-libs-$(echo $version).bz2" >> $GITHUB_ENV
 
       - name: Build the dss libraries
         run: |
@@ -55,7 +56,7 @@ jobs:
       - name: Package the libraries
         run: |
           make package
-          mv package/dss-libs.bz2 package/dss-libs-$VERSION.bz2
+          mv package/dss-libs.bz2 $ARTEFACT 
         shell: bash
         continue-on-error: false
 
@@ -76,12 +77,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: $VERSION
+          tag_name: ${VERSION}
           body_path: latest_changelog.txt
           draft: false
           prerelease: false
-          files: |
-            package/dss-libs-$VERSION.bz2
+          files: ${ARTEFACT}
         continue-on-error: false
 
       - name: Update version for release
