--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           if [ -z ${{ github.event.inputs.branch }} ]
           then
-            branch="main"
+            branch="origin/main"
           else
             branch=${{ github.event.inputs.branch }}
           fi
