--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           if [ -z ${{ github.event.inputs.branch }} ]
           then
-            branch="origin/main"
+            branch="main"
           else
             branch=${{ github.event.inputs.branch }}
           fi
@@ -40,10 +40,9 @@ jobs:
         shell: sh
 
       - name: Checkout the correct branch
-        run: | 
+        run: |
           git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
           git fetch --all
-          git branch -a
           git checkout $BRANCH
 
       - name: Define the commit the version
@@ -85,7 +84,7 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            package/dss-libs-*.bz2
+            package/dss-libs-${{ env.VERSION }}.bz2
         continue-on-error: false
 
       - name: Update version for release
