--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,4 +1,4 @@
-name: Build Zepben Linux libraries
+name: Build Zepben Linux Libraries
 
 on: 
   workflow_dispatch:
@@ -44,9 +44,9 @@ jobs:
           git fetch --all
           git checkout $BRANCH
 
-      - name: Define the commit the version
+      - name: Define the commit version
         run: |
-          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben\]" changelog.md | grep UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
+          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben[[:digit:]]+\]" changelog.md | grep UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
           echo "VERSION=$(echo $version)" >> $GITHUB_ENV
 
       - name: Build the dss libraries
@@ -89,7 +89,7 @@ jobs:
       - name: Update version for release
         id: check
         run: |
-          build/update-changelog.sh $VERSION
+          build/update-changelog.sh $VERSION release
         shell: bash
         continue-on-error: false
 
@@ -103,10 +103,11 @@ jobs:
           git push origin ${GITHUB_REF/refs\/heads\//}
           git tag "v$VERSION"
           git push --tags
+          echo "Released and tagged library version v$VERSION" >> $GITHUB_STEP_SUMMARY
         shell: bash
         continue-on-error: true
 
-      - name: Fail if any previous step failed
+      - name: Fail if previous step failed
         if: steps.merge.outcome == 'failure'
         run: |
           git push origin -d release
