--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -1,4 +1,4 @@
-name: Zepben Snapshot Build
+name: Build Zepben Linux Libraries Snapshot
 
 on: 
   workflow_dispatch:
@@ -72,3 +72,37 @@ jobs:
           files: |
             package/dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2
         continue-on-error: false
+
+      - name: Define the commit version
+        run: |
+          version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben[[:digit:]]+\]" changelog.md | grep UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
+          echo "VERSION=$(echo $version)" >> $GITHUB_ENV
+
+      - name: Update version for snapshot release
+        id: check
+        run: |
+          build/update-changelog.sh $VERSION snapshot
+        shell: bash
+        continue-on-error: false
+
+      - name: Merge and Tag
+        id: merge
+        run: |
+          git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
+          git fetch --all
+          git branch -a
+          git merge origin/release
+          git push origin ${GITHUB_REF/refs\/heads\//}
+          git tag "v$VERSION"
+          git push --tags
+          echo "Built and tagged library version v$VERSION" >> $GITHUB_STEP_SUMMARY
+        shell: bash
+        continue-on-error: true
+
+      - name: Fail if previous step failed
+        if: steps.merge.outcome == 'failure'
+        run: |
+          git push origin -d release
+          echo "There was an error in merging the branch. Release branch was deleted." >> $GITHUB_STEP_SUMMARY
+          exit 1
+        shell: bash
