--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -47,36 +47,23 @@ jobs:
           make ci
         shell: bash
 
-      - name: Package the libraries
-        run: |
-          make package
-          mv package/dss-libs.bz2 package/dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2
-        shell: bash
-
-      - name: Create artefact
-        uses: actions/upload-artifact@master
-        with:
-          name: dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2 
-          path: package/dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2 
-
-      - name: Create Release and upload assets
-        if: success()
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ needs.find-commit.outputs.commitID }}
-          draft: false
-          prerelease: false
-          files: |
-            package/dss-libs-${{ needs.find-commit.outputs.commitID }}.bz2
-        continue-on-error: false
-
       - name: Define the commit version
         run: |
           version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben[[:digit:]]+\]" changelog.md | grep UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
           echo "VERSION=$(echo $version)" >> $GITHUB_ENV
+
+      - name: Package the libraries
+        run: |
+          make package
+          mv package/dss-libs.bz2 package/dss-libs-${{ env.VERSION }}.bz2
+        shell: bash
+
+
+      - name: Create artefact
+        uses: actions/upload-artifact@master
+        with:
+          name: dss-libs-${{ env.VERSION }}.bz2 
+          path: package/dss-libs-${{ env.VERSION }}.bz2 
 
       - name: Update version for snapshot release
         id: check
