--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -65,6 +65,12 @@ jobs:
           name: dss-libs-${{ env.VERSION }}.bz2 
           path: package/dss-libs-${{ env.VERSION }}.bz2 
 
+      - name: Work around git permission issue
+        run: |
+          dname=$(echo ${{github.repository}} | cut -d'/' -f2)
+          git config --global --add safe.directory /__w/$dname/$dname
+        shell: sh
+
       - name: Update version for snapshot release
         id: check
         run: |
