prototype (needs testing)
Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

--- a/zepben-extensions/Makefile
+++ b/zepben-extensions/Makefile
@@ -5,8 +5,9 @@ NAME = rmqpush
 CC = gcc
 CFLAGS = -std=c99 -W -g -fpic -shared
 INCLUDE = -Isrc/include -Isrc/proto
-LDLIBS = -lrabbitmq -lprotobuf-c
-LDFLAGS = -Llib
+RUSTSTREAMLIB = rmqstream
+LDLIBS = -lrabbitmq -lprotobuf-c -l$(RUSTSTREAMLIB)
+LDFLAGS = -Llib -L$(RUSTSTREAMLIB)/target/debug
 PROTODIR = src/proto/hc/opendss
 SRCDIR = src
 OBJDIR = obj
@@ -17,6 +18,9 @@ default: $(NAME)
 
 # TARGETS
 
+$(RUSTSTREAMLIB)/target/debug/lib$(RUSTSTREAMLIB).so: $(RUSTSTREAMLIB)/src/lib.rs
+	cargo build --manifest-path=$(RUSTSTREAMLIB)/Cargo.toml
+
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	@mkdir -p obj
 	$(CC) $(INCLUDE) $(CFLAGS) $< -c -o $@
@@ -25,10 +29,11 @@ $(OBJDIR)/%.o: $(PROTODIR)/%.c
 	@mkdir -p obj
 	$(CC) $(INCLUDE) $(CFLAGS) $< -c -o $@
 
-$(NAME): $(OBJS)  
+$(NAME): $(OBJS) $(RUSTSTREAMLIB)/target/debug/lib$(RUSTSTREAMLIB).so
 	@mkdir -p lib
 	$(CC) $(INCLUDE) $(CFLAGS) $(LDFLAGS) $(LDLIBS) -o $(LIBDIR)/lib$(NAME).so $? 
 
 clean:
 	rm -rf $(OBJDIR) 
 	rm -rf $(LIBDIR)
+	rm -rf $(RUSTSTREAMLIB)/target
