--- a/zepben-extensions/rmqstream/Cargo.toml
+++ b/zepben-extensions/rmqstream/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [lib]
 # Create dynamically-linked library for C interop
+name = "rmqstream"
 crate-type = ["cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
