make rmqstream static
Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

--- a/zepben-extensions/rmqstream/Cargo.toml
+++ b/zepben-extensions/rmqstream/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-# Create dynamically-linked library for C interop
+# Create statically-linked library for C interop
 name = "rmqstream"
-crate-type = ["cdylib"]
+crate-type = ["staticlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
