Add trailing newline
Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Update Cargo.toml

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

add back init_tracing

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Revert klusolvex

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Add trailing whitespace

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Re-add execute permission for build scripts

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Add back libklusolvex.so

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

gitignore Cargo.lock

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

cargo build with --release

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Update changelog

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Update changelog

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

Update changelog

Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

--- a/zepben-extensions/Makefile
+++ b/zepben-extensions/Makefile
@@ -19,9 +19,9 @@ default: $(NAME)
 # TARGETS
 
 $(LIBDIR)/lib$(RUSTSTREAMLIB).a: $(RUSTSTREAMLIB)/Cargo.toml
-	cargo build --manifest-path=$(RUSTSTREAMLIB)/Cargo.toml
+	cargo build --release --manifest-path=$(RUSTSTREAMLIB)/Cargo.toml
 	@mkdir -p $(LIBDIR)
-	cp $(RUSTSTREAMLIB)/target/debug/*.a $(LIBDIR)/
+	cp $(RUSTSTREAMLIB)/target/release/*.a $(LIBDIR)/
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	@mkdir -p $(OBJDIR)
