Don't check for the released tags when updating the changelog
Signed-off-by: Alex Lourie <alex.lourie@zepben.com>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Update version for release
         id: check
         run: |
-          build/update-changelog.sh $VERSION release
+          build/update-changelog.sh release
         shell: bash
         continue-on-error: false
 
