--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,17 +1,19 @@
 name: Build Zepben Linux Libraries
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'The branch to use for the release'     
+        description: 'The branch to use for the release'
         required: false
         type: string
 
 jobs:
   build_linux_x64:
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     runs-on: ubuntu-latest
-    container: 
+    container:
       image: ghcr.io/zepben/dss-capi-builder:latest
 
     env:
@@ -45,9 +47,11 @@ jobs:
           git checkout $BRANCH
 
       - name: Define the commit version
+        id: version
         run: |
           version=$(grep -E "## \[[0-9]+\.[0-9]+\.[0-9]\.[0-9]+-zepben[[:digit:]]+\]" changelog.md | grep UNRELE | head -n 1 | cut -f2 -d' ' | sed -E 's/\[//g;s/\]//g')
           echo "VERSION=$(echo $version)" >> $GITHUB_ENV
+          echo "version=$(echo $version)" >> $GITHUB_OUTPUT
 
       - name: Build the dss libraries
         run: |
@@ -114,3 +118,11 @@ jobs:
           echo "There was an error in merging the branch. Release branch was deleted." >> $GITHUB_STEP_SUMMARY
           exit 1
         shell: bash
+  image:
+    uses: zepben/.github/.github/workflows/build-sealed-docker-image-public.yml@main
+    secrets: inherit
+    needs: build_linux_x64
+    with:
+      version_tag: ${{ needs.build_linux_x64.outputs.version }}
+      latest_tag: true
+      push_image: true
