move protobuf files back
Signed-off-by: Marcus Koh <marcus.koh@zepben.com>

--- a/zepben-extensions/Makefile
+++ b/zepben-extensions/Makefile
@@ -8,7 +8,7 @@ INCLUDE = -Isrc/include -Isrc/proto
 RUSTSTREAMLIB = rmqstream
 LDLIBS = -lrabbitmq -lprotobuf-c -l$(RUSTSTREAMLIB)
 LDFLAGS = -L$(LIBDIR)
-PROTODIR = src/proto/zepben/protobuf/hc/opendss
+PROTODIR = src/proto/hc/opendss
 SRCDIR = src
 OBJDIR = obj
 LIBDIR = lib
