--- a/zepben-extensions/Makefile
+++ b/zepben-extensions/Makefile
@@ -5,8 +5,9 @@ NAME = rmqpush
 CC = gcc
 CFLAGS = -std=c99 -W -g -fpic -shared
 INCLUDE = -Isrc/include -Isrc/proto
-LDLIBS = -lrabbitmq -lprotobuf-c
-LDFLAGS = -Llib
+RUSTSTREAMLIB = rmqstream
+LDLIBS = -lrabbitmq -lprotobuf-c -l$(RUSTSTREAMLIB)
+LDFLAGS = -L$(LIBDIR)
 PROTODIR = src/proto/hc/opendss
 SRCDIR = src
 OBJDIR = obj
@@ -17,16 +18,21 @@ default: $(NAME)
 
 # TARGETS
 
+$(LIBDIR)/lib$(RUSTSTREAMLIB).a: $(RUSTSTREAMLIB)/Cargo.toml
+	cargo build --release --manifest-path=$(RUSTSTREAMLIB)/Cargo.toml
+	@mkdir -p $(LIBDIR)
+	cp $(RUSTSTREAMLIB)/target/release/*.a $(LIBDIR)/
+
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
-	@mkdir -p obj
+	@mkdir -p $(OBJDIR)
 	$(CC) $(INCLUDE) $(CFLAGS) $< -c -o $@
 
 $(OBJDIR)/%.o: $(PROTODIR)/%.c
-	@mkdir -p obj
+	@mkdir -p $(OBJDIR)
 	$(CC) $(INCLUDE) $(CFLAGS) $< -c -o $@
 
-$(NAME): $(OBJS)  
-	@mkdir -p lib
+$(NAME): $(OBJS) $(LIBDIR)/lib$(RUSTSTREAMLIB).a
+	@mkdir -p $(LIBDIR)
 	$(CC) $(INCLUDE) $(CFLAGS) $(LDFLAGS) $(LDLIBS) -o $(LIBDIR)/lib$(NAME).so $? 
 
 clean:
